syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.adia.auth";
option java_outer_classname = "AuthProto";

service AuthService {
  rpc Register(RegisterRequest) returns (AuthResponse);
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc VerifyToken(TokenRequest) returns (VerifyTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshTokenRequest {
  string refreshToken = 1;
}

message TokenRequest {
  string token = 1;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  string accessToken = 3;
  string refreshToken = 4;
  int64 expiresIn=5;
  User user = 6;
}

message VerifyTokenResponse {
  bool valid = 1;
  string message = 2;
  User user = 3;
  bool success = 4;
}

// The data you may embed as claims in JWT
message User {
  uint64 id = 1;
  string username = 2;
  string email = 3;
  bool isAdmin = 4;
  bool isEmailVerified = 5;
  bool isActivated = 6;
  bool isSuspended = 7;
  string createdAt = 8;
  string updatedAt = 9;
}