syntax = "proto3";

package notification;

option java_multiple_files = true;
option java_package = "com.adia.notification";
option java_outer_classname = "NotificationProto";

// Service de notifications
service NotificationService {
  rpc StreamNotifications(UserRequest) returns (stream Notification);
  rpc CreateNotification(NewNotificationRequest) returns (Notification);
  rpc NotifyGroupInvite(GroupInviteRequest) returns (Notification);
}

message UserRequest {
  string userId = 1;
}

message Notification {
  string id = 1;
  string username = 2;
  string content = 3;
  string link = 4;
  string createdAt = 5;
  bool unread = 6;
}

message NewNotificationRequest {
  string userId = 1;
  string message = 2;
}

message GroupInviteRequest {
  string inviterId = 1;
  string inviteeId = 2;
  string groupId = 3;
}